tests/snapshots/run__run@testfiles__cart.toml.snap
---
source: tests/run.rs
expression: "read_to_string(dir.path().join(\"pbqff.out\")).unwrap()"
snapshot_kind: text
---
PID: [PID]
version: [version]
normalized geometry:[Normalized Geometry]
point group:C2v(Axis(Y), Plane(Axis(Y), Axis(Z)), Plane(Axis(X), Axis(Y)))
15 Cartesian coordinates requires 11952 points
[Vibrational States]
Transformed Geometry (Å):
[Transformed Geometry]
Equilibrium Rotational Constants (cm-1):
[Rotational Constants]

Geometry:
[Geometry]
Vibrational Frequencies (cm-1):
[Freqs]
ZPT =   6675.1

Rotational Constants (cm-1):
[Rotational Constants]
Coriolis Resonances:
    4    3    C
    5    4    A
    6    5    A
    7    6    B
    8    5    B
    8    7    A

Type 1 Fermi Resonances:
    5    2
    6    2
    7    2
    8    2

Type 2 Fermi Resonances:
    4    2    1
    6    2    1
    6    4    2
    8    2    0

normal termination of pbqff
