tests/snapshots/run__run@testfiles__norm.toml.snap
---
source: tests/run.rs
expression: "read_to_string(dir.path().join(\"pbqff.out\")).unwrap()"
snapshot_kind: text
---
PID: [PID]
version: deadbeef
normalized geometry:[Normalized Geometry]
point group:C2v(Axis(Y), Plane(Axis(Y), Axis(Z)), Plane(Axis(X), Axis(Y)))
9 Cartesian coordinates requires 64 points
[Normal Coordinates]

Harmonic Frequencies:
    0   A1  2602.7
    1   B2  2523.5
    2   A1  1315.5
3 normal coordinates require 69 points
anpass sum of squared residuals:    3.47850821e-19
[Vibrational States]
Transformed Geometry (Å):
[Transformed Geometry]
Equilibrium Rotational Constants (cm-1):
[Rotational Constants]

Geometry:
[Geometry]
Vibrational Frequencies (cm-1):
[Freqs]
ZPT =   3158.7

Rotational Constants (cm-1):
[Rotational Constants]
Coriolis Resonances:
    1    0    C

Type 1 Fermi Resonances:
    2    0

Type 2 Fermi Resonances:

normal termination of pbqff
