tests/snapshots/run__run@testfiles__test.toml.snap
---
source: tests/run.rs
expression: "read_to_string(dir.path().join(\"pbqff.out\")).unwrap()"
snapshot_kind: text
---
PID: [PID]
version: deadbeef

Configuration Options:
geometry = {
C
C 1 CC
C 1 CC 2 CCC
H 2 CH 1 HCC 3 180.0
H 3 CH 1 HCC 2 180.0

CC =                  1.42101898
CCC =                55.60133141
CH =                  1.07692776
HCC =               147.81488230

}
optimize = true
charge = 0
step_size = 0.005
coord_type = sic
template = scfcrt=1.D-21 aux(precision=14 comp xp xs xw) PM6 THREADS=1
hybrid_template = scfcrt=1.D-21 aux(precision=14 comp xp xs xw) PM6 THREADS=1
queue_template = 
program = mopac
queue = local
sleep_int = 2
job_limit = 2048
chunk_size = 1
findiff = false
check_int = 100
dummy_atoms = None
norm_resume_hff = false

Optimized Geometry:
[Geometry]
Vibrational Frequencies (cm-1):
[Freqs]
ZPT =   6673.9

Rotational Constants (cm-1):
[Rotational Constants]
Coriolis Resonances:
    4    3    C
    5    4    A
    6    5    A
    7    6    B
    8    5    B
    8    7    A

Type 1 Fermi Resonances:
    5    2
    6    2
    7    2
    8    2

Type 2 Fermi Resonances:
    3    2    0
    4    2    1
    6    2    1
    6    4    2
    8    2    0

normal termination of pbqff
